# OverView

./: .gitignore  CORRECTIONS_SUMMARY.md  README.md  README_TESTS.md  RENDER_SETUP.md  SECURITY_SUMMARY.md  START_APP.bat  add_date_limite_to_taches.py  app.py  check_db.py  check_db_structure.py  check_evenements_table.py  check_notifications_db.py  check_tables.py  check_users.py  create_complete_flask.py  create_notifications_table.py  create_real_flask_server.py  create_test_user.py  debug_flask.py  debug_register.py  download_flask.py  et --hard 3b1bb99  fix_currency_system.py  fix_db.py  fix_evenements_table.py  fix_pip_and_flask.py  fix_python.py  force_fix_evenements.py  init_db.py  init_postgres_render.py  init_registre_db.py  init_render_db.py  install_flask.py  install_flask_direct.py  install_flask_final.py  launch_app.bat  launch_real_app.py  launch_real_app_fixed.py  launch_web.py  (+24 more)
static/: chart_loader.js  chart_logic.js  dashboard_charts.js  notifications.js  styles.css  tab_navigation.js
templates/: archives.html  base_with_tabs.html  calendrier.html  dashboard.html  forgot_password_answer.html  forgot_password_request.html  formulaire_evenement.html  formulaire_objectif.html  formulaire_tache.html  index.html  login.html  notifications.html  objectif_detail.html  outils.html  parametres.html  parametres_ameliore.html  parametres_avances.html  rapports.html  register.html  registre_caisse.html  registre_caisse_pdf.html  reset_password_final.html  tache_detail.html  taches.html
templates/tab_content/: agenda.html  dashboard.html  epargne.html  taches.html  (+3 more)
