[tool.poetry]
name = "mon-app-web"
version = "0.1.0"
description = "Application Flask avec registre de caisse et gestion d'objectifs"
authors = ["NDF Cloud"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^3.1.1"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.10"
waitress = "^3.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app:app"
